crates/reinhardt-core/macros/tests/ui/fail/invalid_syntax.stderr
error: expected `:`
 --> tests/ui/fail/invalid_syntax.rs:8:8
  |
8 |         auth "reinhardt.contrib.auth",
  |              ^^^^^^^^^^^^^^^^^^^^^^^^
